--- a/index.html
+++ b/index.html
@@ -875,8 +875,7 @@
 					   <h4>Address</h4>
 					   <p class="address">
 						   Sujata Saini<br>
-						   6-6 Asahigaoka, Hino-shi <br>
-						   191-0065, Tokyo, Japan<br>
+						   Tokyo, Japan
 						   <span></span>
 					   </p>
 
