--- a/index.html
+++ b/index.html
@@ -875,7 +875,8 @@
 					   <h4>Address</h4>
 					   <p class="address">
 						   Sujata Saini<br>
-						   Tokyo, Japan
+						   6-6 Asahigaoka, Hino-shi <br> 
+                     191-0065, Tokyo, Japan
 						   <span></span>
 					   </p>
 
