--- a/index.html
+++ b/index.html
@@ -317,6 +317,16 @@
                   </p>
                </div>
             </div> <!-- item end -->
+		 
+		<div class="row item">
+               <div class="twelve columns">
+                  <p>
+                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “Toward Construction of Handwritten Indus Signs
+			  Dataset” The 10th International Symposium on Computational Intelligence and Industrial Applications
+			  (ISCIIA2022) Sep.23-Sep.25, 2022, Beijing, China..
+                  </p>
+               </div>
+            </div> <!-- item end -->
             
 			</div> <!-- main-col end -->
 
