--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                   <p>
                      <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “Toward Construction of Handwritten Indus Signs
 			  Dataset” The 10th International Symposium on Computational Intelligence and Industrial Applications
-			  (ISCIIA2022) Sep.23-Sep.25, 2022, Beijing, China..
+			  (ISCIIA2022) Sep.23-Sep.25, 2022, Beijing, China.
                   </p>
                </div>
             </div> <!-- item end -->
