--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                <li><a href="https://www.linkedin.com/in/sujatasaini/"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="saini-sujata@ed.tmu.ac.jp"><i class="fa fa-envelope"></i></a></li>
                <li><a href="https://github.com/sujatasaini"><i class="fa fa-github"></i></a></li>
+		<li><a href="https://g.dev/sujatasaini"><i class="fa fa-google"></i></a></li>
             </ul>
          </div>
       </div>
