--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
             </div>
 
             <div class="link-box">
-               <a href="https://indusdraw.tech/">Details</a>
+               <a href="https://sujatasaini.com/Indus-Draw/">Details</a>
                <a class="popup-modal-dismiss">Close</a>
             </div>
          
