--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
             <div class="row item">
                <div class="twelve columns">
                   <p>
-                     <b>Sujata Saini, </b> Vishal Verma, “Japanese Historical Character Recognition using Deep Convolutional Neural Network (DCNN) with DropBlock Regularization,” International 
-                     Journal of Recent Technology and Engineering, Volume-8, Issue-2, July 2019, pp. 3510-3515.
+                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “ Construction of Handwritten Indus Signs Dataset Employing Social Approach,” JACIII
+                     Journal of Advanced Computational Intelligence and Intelligent Informatics. - Accepted
                   </p>
                </div>
             </div> <!-- item end -->
@@ -325,6 +325,15 @@
                      <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “Toward Construction of Handwritten Indus Signs
 			  Dataset” The 10th International Symposium on Computational Intelligence and Industrial Applications
 			  (ISCIIA2022) Sep.23-Sep.25, 2022, Beijing, China.
+                  </p>
+               </div>
+            </div> <!-- item end -->
+
+            <div class="row item">
+               <div class="twelve columns">
+                  <p>
+                     <b>Sujata Saini, </b> Vishal Verma, “Japanese Historical Character Recognition using Deep Convolutional Neural Network (DCNN) with DropBlock Regularization,” International 
+                     Journal of Recent Technology and Engineering, Volume-8, Issue-2, July 2019, pp. 3510-3515.
                   </p>
                </div>
             </div> <!-- item end -->
