--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <div class="row item">
                <div class="twelve columns">
                   <p>
-                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “ Construction of Handwritten Indus Signs Dataset Employing Social Approach,” JACIII
+                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “ Construction of Handwritten Indus Signs Dataset Employing Social Approach,” JACIII:
                      Journal of Advanced Computational Intelligence and Intelligent Informatics. - Accepted
                   </p>
                </div>
