--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
             <div class="row item">
                <div class="twelve columns">
                   <p>
-                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “ Construction of Handwritten Indus Signs Dataset Employing Social Approach,” Speaical Issue, JACIII:
-                     Journal of Advanced Computational Intelligence and Intelligent Informatics. - Accepted
+                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “ Construction of Handwritten Indus Signs Dataset Employing Social Approach,” Special Issue, JACIII:
+                     Journal of Advanced Computational Intelligence and Intelligent Informatics - Accepted.
                   </p>
                </div>
             </div> <!-- item end -->
