--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <div class="row item">
                <div class="twelve columns">
                   <p>
-                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “ Construction of Handwritten Indus Signs Dataset Employing Social Approach,” Special Issue, JACIII:
+                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama, “ Construction of Handwritten Indus Signs Dataset Employing Social Approach,” Special Issue, JACIII:
                      Journal of Advanced Computational Intelligence and Intelligent Informatics - Accepted.
                   </p>
                </div>
@@ -322,7 +322,7 @@
 		<div class="row item">
                <div class="twelve columns">
                   <p>
-                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama “Toward Construction of Handwritten Indus Signs
+                     <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama, “Toward Construction of Handwritten Indus Signs
 			  Dataset” The 10th International Symposium on Computational Intelligence and Industrial Applications
 			  (ISCIIA2022) Sep.23-Sep.25, 2022, Beijing, China.
                   </p>
