--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                <div class="twelve columns">
                   <p>
                      <b>Sujata Saini, </b> Hiroki Shibata, Yasufumi Takama, “ Construction of Handwritten Indus Signs Dataset Employing Social Approach,” Special Issue, JACIII:
-                     Journal of Advanced Computational Intelligence and Intelligent Informatics - Accepted.
+                     Journal of Advanced Computational Intelligence and Intelligent Informatics, Volume-2, Issue-1, Jan 2024, pp. 122-128.
                   </p>
                </div>
             </div> <!-- item end -->
