--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                   <p class="info">Doctor of Philosophy in Computer Science <span>&bull;</span> <em class="date">April 2021 - March 2024</em></p>
 
                   <p>
-                     I am researching mainly Automated Machine Learning (AutoML) and Information Visualization. 
-                     I also have a keen interest in NLP, Data Science, and Web Development. 
-                     My Ph.D. research will add up my knowledge to contribute to data science and machine learning to develop 
-                     advanced information visualization techniques for multiple applications such as digital humanities, real-time tracking, 
-                     intellectual property, etc.
+                    My research primarily focuses on Automated Machine Learning (AutoML) and Information Visualization, 
+			  with a keen interest in Natural Language Processing (NLP), Data Science, and Web Development. 
+			  Currently pursuing a Ph.D., my aim is to augment my expertise to contribute significantly to the fields of data science and machine learning. 
+			  Specifically, I aspire to develop advanced information visualization techniques applicable across various domains, including digital humanities, real-time tracking, and intellectual property. 
+			  Through my research endeavors, I endeavor to drive innovation and address pressing challenges in these areas.
                   </p>
 
                </div>
@@ -171,12 +171,11 @@
                <div class="twelve columns">
                   <h3>Chaudhary Ranbir Singh University</h3>
                   <p class="info">Master of Philosophy in Computer Science<span>&bull;</span> <em class="date">Aug 2015 - April 2017</em></p>
-                  <p>In 2015, I was closely related to data science and machine learning during my master's of philosophy in 
-                     computer science at Chaudhary Ranbir Singh University in India. I worked as a teaching assistant to sharpen 
-                     my skills and took the hands-on experience in soft computing and MATLAB. In my post-graduation project, 
-                     I took a bold step and considered deep neural networks for computer vision applications to include in my research. 
-                     My master thesis was on "Japanese Historical Character Recognition using Deep Convolutional Neural Network (DCNN) 
-                     with Drop Block Regularization."
+                  <p>During my pursuit of a Master's of Philosophy in Computer Science at Chaudhary Ranbir Singh University in India in 2015, 
+			  I immersed myself in the realms of data science and machine learning. As a teaching assistant, I honed my skills while gaining hands-on experience 
+			  in soft computing and MATLAB. For my post-graduation project, I embarked on a pioneering endeavor, exploring the application of deep neural networks in computer vision. 
+			  This led to my master thesis, which delved into "Japanese Historical Character Recognition using Deep Convolutional Neural Network (DCNN) with Drop Block Regularization," 
+			  showcasing my commitment to advancing the field through innovative research.
                   </p>
                </div>
                </div>
@@ -187,10 +186,10 @@
                   <h3>Maharishi Dayanand University</h3>
                   <p class="info">Masters of Science in Computer Science <span>&bull;</span> <em class="date">Aug 2013 - May 2015</em></p>
                   <p>
-                     I have studied various computer science concepts deeply in my Master's degree. To solve computational problems and
-                     design solution-based algorithms, I took hands-on sessions in Data Structure and Algorithms along with Discrete 
-                     Mathematics, C, C++, Software Engineering, Database Management Systems, Computer Graphics, Computer Networks, and 
-                     Artificial Intelligence. 
+                   In pursuit of my Master's degree, I delved deeply into a myriad of computer science concepts, equipping myself with a comprehensive skill set to tackle complex computational challenges. 
+			  Through intensive study and practical application, I gained expertise in areas such as Data Structures and Algorithms, Discrete Mathematics, C, C++, 
+			  Software Engineering, Database Management Systems, Computer Graphics, Computer Networks, and Artificial Intelligence. 
+			  These hands-on sessions provided me with the necessary foundation and proficiency to develop solution-oriented algorithms and address diverse computing problems effectively. 
                   </p>
                </div></div>
 
@@ -199,8 +198,9 @@
                   <h3>Maharishi Dayanand University</h3>
                   <p class="info">Bachelors  of Science in Computer Science<span>&bull;</span> <em class="date">Aug 2010 - May 2013</em></p>
                   <p>
-                     I have studied Mathematics, Physics, and Computer Science subjects in my Bachelor's degree. To learn the basics of these subjects, 
-                     I have to continually focus on different patterns of how these concepts are related to real life.
+                     Throughout my Bachelor's degree, I extensively studied Mathematics, Physics, and Computer Science, honing my understanding of fundamental principles in these disciplines. 
+			  A key aspect of my learning process involved continuously exploring the various patterns and connections between these subjects and real-life applications. 
+			  This holistic approach not only deepened my comprehension of the material but also cultivated a practical perspective essential for addressing real-world challenges effectively.
                   </p>
                </div></div>
 
@@ -221,16 +221,29 @@
          </div>
 
          <div class="nine columns main-col">
-            
+
+		             <div class="row item">
+               <div class="twelve columns">
+                  <h3>MEXT Scholarship Association</h3>
+                  <p class="info">Vice-Head Finance <span>&bull;</span> <em class="date">Aug 2023 - Present</em></p>
+                  <p>
+                   Appointed as Vice Head of Finance for the Mext Scholarship Association in 2023, 
+			  I leveraged this opportunity to engage with international students, address their concerns, 
+			  and foster a supportive environment. My responsibilities included overseeing financial management, including budgeting, fund disbursement, and securing sponsorships. 
+			  Additionally, I played a pivotal role in assisting students and coordinating various events, contributing to the association's overall success and impact.
+                  </p>
+               </div>
+            </div> <!-- item end -->
+		 
             <div class="row item">
                <div class="twelve columns">
                   <h3>Microsoft Student Learn</h3>
                   <p class="info">Ambassador/Founder at Tokyo Metropolitan University <span>&bull;</span> <em class="date">Jan 2022 - Present</em></p>
                   <p>
-                     I was selected as Microsoft Learn Student Ambassador in January 2022. 
-                     I am so fortunate that I was given this opportunity to learn and grow with this profound tech community 
-                     spreading around the globe. I am responsible to joined a technical path and learning from Microsoft resources. 
-                     To extend this knowledge, I need to organize technical events collaborating with other ambassadors and industry professionals. 
+                    Appointed as a Microsoft Learn Student Ambassador in January 2022, 
+			  I am privileged to contribute to a dynamic tech community with a global footprint. 
+			  My responsibilities include embarking on technical learning paths through Microsoft resources and 
+			  organizing collaborative events with fellow ambassadors and industry experts, fostering continuous learning and growth within the community.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -240,8 +253,8 @@
                   <h3>Technovation Girls</h3>
                   <p class="info">Mentor<span>&bull;</span> <em class="date">Dec 2021 - March 2022</em></p>
                   <p>
-                  I was selected as a mentor in the Technovation Girls Coding challenge. I guided junior high school and high 
-                  school girls on how to develop a theme-based mobile application and deploy it within time and budget.
+                  Honored to serve as a mentor in the Technovation Girls Coding Challenge, I provided guidance to junior high school and high school girls in developing theme-based mobile applications. 
+			  Through effective mentorship, I facilitated the successful deployment of these applications within defined timeframes and budgets, empowering young women to excel in technology and innovation.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -252,9 +265,9 @@
                   <h3>Women Techmakers</h3>
                   <p class="info">Ambassador<span>&bull;</span> <em class="date">Sep 2021 - Present</em></p>
                   <p>
-                     When I was given this opportunity, I realized the potential of women in technical fields. 
-                     We can't ignore that the women percentage in this industry is considerably less than men. 
-                     We need more women to balance the ratio and encourage them by providing valuable resources. 
+                    Upon seizing this opportunity, I recognized the untapped potential of women in technical fields. Acknowledging the significant gender disparity within the industry, 
+			  I advocate for initiatives that aim to empower and support women by providing valuable resources. 
+			  It is imperative to strive for gender balance in the tech sector, fostering an inclusive environment that harnesses the talents of all individuals.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -263,11 +276,9 @@
             <div class="row item">
                <div class="twelve columns">
                   <h3>Google Developer Student Club</h3>
-                  <p class="info"> GDSC Lead/Founder at Tokyo Metropolitan University <span>&bull;</span> <em class="date">Aug 2021 - Present</em></p>
-                  <p>I was selected as a GDSC Lead at Tokyo Metropolitan University in the 2021-2022 session. 
-                     I was dealing with two major problems in my institution: a lack of technical knowledge as per the latest trends 
-                     among students and the second is communication. My job is to approach the students by all possible methods and deliver 
-                     the technical content so they can secure a career in the tech industry.
+                  <p class="info"> Appointed as a GDSC Lead at Tokyo Metropolitan University for the 2021-2022 session, I addressed key challenges within the institution, 
+			  notably the gap in students' technical knowledge and communication barriers. 
+			  Employing diverse outreach strategies, I endeavored to provide students with up-to-date technical content, empowering them to pursue successful careers in the ever-evolving tech industry.
                   </p>
                </div>     
                </div> <!-- item end -->       
@@ -277,8 +288,10 @@
                   <h3>S.B.S.S</h3>
                   <p class="info">Product Supervisor Intern, Bio-Metric Devices and Applications <span>&bull;</span> <em class="date">Mar 2016 - Sep 2016</em></p>
                   <p>
-                  I have handled the Bio-Metric data of multiple users for fingerprint identification in Government State Examination Centers. 
-                  My job is to travel to each center, collect the data, process it, and securely deliver it.
+                  Tasked with managing biometric data for fingerprint identification at Government State Examination Centers, 
+			  I executed a meticulous process involving travel to multiple centers, 
+			  data collection, processing, and secure delivery. My role demanded precision and adherence to stringent security protocols to ensure the integrity 
+			  and confidentiality of the data entrusted to me.
                   </p>
                </div>
             </div> <!-- item end -->
@@ -288,8 +301,10 @@
                   <h3>Chaudhary Ranbir Singh University</h3>
                   <p class="info">Teaching Assistant, Soft-Computing and Matlab <span>&bull;</span> <em class="date">Sep 2015 - Feb 2016</em></p>
                   <p>
-                     I have worked as a teaching assistant at C.R.S University under the guidance of Prof. Anumpan Bhatia and Prof. Harish Rohil. I taught Soft computing, where I mainly focused on Neural Networks, 
-                     fuzzy logic, and genetic algorithm. Also, I had given programming classes in MATLAB.
+                     As a teaching assistant at C.R.S University, under the mentorship of Prof. Anumpan Bhatia and Prof. Harish Rohil, 
+			  I played a pivotal role in instructing Soft Computing courses. With a focus on Neural Networks, fuzzy logic, and genetic algorithms, 
+			  I facilitated comprehensive learning experiences for students. 
+			  Additionally, I conducted programming sessions in MATLAB, equipping students with practical skills to complement theoretical knowledge in the field.
                   </p>
                </div>
             </div> <!-- item end -->
