--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
             <div class="row item">
                <div class="twelve columns">
                   <h3>Google Developer Student Club</h3>
-                  <p class="info"> Appointed as a GDSC Lead at Tokyo Metropolitan University for the 2021-2022 session, I addressed key challenges within the institution, 
+                  <p class="info">GDSC Lead/Founder at Tokyo Metropolitan University <span>&bull;</span> <em class="date">Aug 2021 - Aug 2022</em></p> 
+			  <p>Appointed as a GDSC Lead at Tokyo Metropolitan University for the 2021-2022 session, I addressed key challenges within the institution, 
 			  notably the gap in students' technical knowledge and communication barriers. 
 			  Employing diverse outreach strategies, I endeavored to provide students with up-to-date technical content, empowering them to pursue successful careers in the ever-evolving tech industry.
                   </p>
