--- a/index.html
+++ b/index.html
@@ -222,12 +222,48 @@
 
          <div class="nine columns main-col">
 
+		 		             <div class="row item">
+               <div class="twelve columns">
+                  <h3>Riken</h3>
+                  <p class="info">Researcher <span>&bull;</span> <em class="date">May 2024 - Present</em></p>
+                  <p>At RIKEN in Tokyo, my role involves harnessing the potential of tensor-based methods to tackle the intricate challenge of image classification for historical language datasets. 
+			  The primary goal is to develop algorithms capable of accurately identifying and classifying script styles and ages from various historical periods. 
+			  This task is particularly challenging due to the diversity and complexity of historical scripts, which often include variations in style, degradation over time, and regional differences. 
+			  My research contributes to the broader field of digital humanities by creating tools that help historians and linguists access and analyze vast archives of unreadable texts more efficiently, thereby unlocking new insights into our cultural heritage.
+                  </p>
+               </div>
+            </div> <!-- item end -->
+
+		 		             <div class="row item">
+               <div class="twelve columns">
+                  <h3>Tokyo Metropolitan University</h3>
+                  <p class="info">Teaching Assistant <span>&bull;</span> <em class="date">April 2024 - May 2024</em></p>
+                  <p>
+                   In April 2024, I worked as a Teaching Assistant at Tokyo Metropolitan University’s Takama Laboratory, focusing on a comprehensive one-month survey of recommendation systems. 
+			  My responsibilities included supporting academic research and assisting students with the technical aspects and applications of recommendation systems. 
+			  This role required me to facilitate learning by organizing tutorials, managing course materials, and providing hands-on guidance to students as they navigated complex algorithms and data analysis techniques. 
+			  My contribution helped enhance the students' proficiency in developing innovative solutions tailored to real-world problems using recommendation technologies.
+                  </p>
+               </div>
+            </div> <!-- item end -->
+
+		 		             <div class="row item">
+               <div class="twelve columns">
+                  <h3>IEEE</h3>
+                  <p class="info">Lead Ambassador <span>&bull;</span> <em class="date">April 2024 - Present</em></p>
+                  <p>Since April 2024, I have been serving as the Lead Ambassador for IEEE's R10 Adhoc Committee on Entrepreneurship and Innovation, based in Tokyo, Japan. 
+			  In this role, I am responsible for spearheading initiatives aimed at enhancing entrepreneurial capabilities and promoting innovative methodologies among engineers throughout the Asia-Pacific region. 
+			  My duties involve organizing workshops, seminars, and networking events that facilitate knowledge exchange and inspire innovation. Through these efforts, we strive to empower engineers to develop groundbreaking solutions and advance technological progress across diverse industries within the region.
+                  </p>
+               </div>
+            </div> <!-- item end -->
+		 
 		             <div class="row item">
                <div class="twelve columns">
                   <h3>MEXT Scholarship Association</h3>
                   <p class="info">Vice-Head Finance <span>&bull;</span> <em class="date">Aug 2023 - Present</em></p>
                   <p>
-                   Appointed as Vice Head of Finance for the Mext Scholarship Association in 2023, 
+			  Appointed as Vice Head of Finance for the Mext Scholarship Association in 2023, 
 			  I leveraged this opportunity to engage with international students, address their concerns, 
 			  and foster a supportive environment. My responsibilities included overseeing financial management, including budgeting, fund disbursement, and securing sponsorships. 
 			  Additionally, I played a pivotal role in assisting students and coordinating various events, contributing to the association's overall success and impact.
