--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
             <li><a class="smoothscroll" href="#testimonials">Quotes</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
-		 <li><a class="smoothscroll" href="https://sujatasaini.com/blog/">Blog</a></li>
+		 <li><a href="https://sujatasaini.com/blog/">Blog</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
